# AI-Coding

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: feature_scaler.py  gradient_descent.py  linear_regression.py  logistic_regression.py
src/utils/: sigmoid.py
tests/integration/: test_linear_regression_integration.py  test_logistic_regression_integration.py
tests/unit/: test_feature_scaler.py  test_gradient_descent.py  test_linear_regression.py  test_logistic_regression.py  test_sigmoid.py
