[tool.poetry]
name = "ai-coding"
version = "0.1.0"
description = "Collection of ML specific algorithms implemented in Python"
authors = ["Shobhit Kulshreshtha"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
numpy = "^1.26.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
